# btoep

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt  btoep-add.c  btoep-create.c  btoep-find-offset.c  btoep-get-index.c  btoep-list-ranges.c  btoep-read.c  btoep-set-size.c
apps/res/: add_usage  create_usage  find_offset_usage  get_index_usage  list_ranges_usage  read_usage  set_size_usage
apps/util/: .gitignore  common.h  opt.c  opt.h
lib/: CMakeLists.txt
lib/include/btoep/: dataset.h  range.h  version.h
lib/src/: dataset.c  range.c
test/: CMakeLists.txt
test/system/: CMakeLists.txt  helper.py  test-add.py  test-create.py  test-find-offset.py  test-get-index.py  test-list-ranges.py  test-read.py  test-set-size.py
test/unit/: CMakeLists.txt  test-data.c  test-index.c  test-range.c  test.h
test/workflow/: CMakeLists.txt  example.sh  small-writes.sh
